ajout d'une image pour le background

--- a/client/public/style/_config.scss
+++ b/client/public/style/_config.scss
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root {
+
+    --basic_site_color:#b58348;
+
+    --basic_site_color2:#e7d1b7;
+}
