--- a/client/public/style/home/home.scss
+++ b/client/public/style/home/home.scss
@@ -1,14 +1,24 @@
 @use '../config';
 
+body {
+    background: url('/assets/pic1.jpg') center no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+   
+}
+/* b58348  e7d1b7 */
 #page_head {
 
     width: 100%;
-    margin: 1rem;
-    padding: 1rem;
+    //margin: 0.6rem;
+    padding: 0.6rem;
+    backdrop-filter: blur(0.4rem);
+    margin: 1rem 0;
 
     h1 {
-        font-size: 3rem;
+        font-size: 4rem;
         text-align: center;
+        color:var(--basic_site_color);
     }
 }
 
@@ -25,19 +35,31 @@ form {
     }
 
     .input_container {
-        border:solid 2px green;
-        width: 28%;
+        //border:solid 2px green;
+        width: 25%;
         margin: 0.6rem;
     }
 
     .input_container input {
         width: 100%;
         height: 2rem;
+        padding: 0.6rem;
+        outline-color: var(--basic_site_color);
+        border-width: 0.2rem;
+        height: 3rem;
+        //border-radius: 20px;
+        //border-color: var(--basic_site_color2);
+        border: none;
+        background-color: rgba($color: #fff, $alpha: 0.6);
         
     }
 
+    .input_container input::placeholder {
+        font-size: 1rem;
+    } 
+
     #button_container {
-        border:solid 2px green;
+        //border:solid 2px green;
         flex-grow: 0.5;
         margin: 0.6rem;
     }
@@ -48,6 +70,9 @@ form {
         border:none;
         text-align: center;
         font-size: 1.4rem;
+        color: var(--basic_site_color2);
+        background:var(--basic_site_color);
+        border-radius: 6px;
     }
 
 }
