--- a/client/public/style/home/home.scss
+++ b/client/public/style/home/home.scss
@@ -1,4 +1,5 @@
 @use '../config';
+@use 'RestaurantList';
 
 body {
     background: url('/assets/pic1.jpg') center no-repeat;
@@ -6,11 +7,10 @@ body {
     min-height: 100vh;
    
 }
-/* b58348  e7d1b7 */
+
 #page_head {
 
     width: 100%;
-    //margin: 0.6rem;
     padding: 0.6rem;
     backdrop-filter: blur(0.4rem);
     margin: 1rem 0;
@@ -47,8 +47,7 @@ form {
         outline-color: var(--basic_site_color);
         border-width: 0.2rem;
         height: 3rem;
-        //border-radius: 20px;
-        //border-color: var(--basic_site_color2);
+        border-radius: 6px;
         border: none;
         background-color: rgba($color: #fff, $alpha: 0.6);
         
@@ -56,6 +55,7 @@ form {
 
     .input_container input::placeholder {
         font-size: 1rem;
+        color: var(--basic_site_color);
     } 
 
     #button_container {
