mise en place de zod

--- a/client/public/style/home/home.scss
+++ b/client/public/style/home/home.scss
@@ -73,6 +73,7 @@ form {
         color: var(--basic_site_color2);
         background:var(--basic_site_color);
         border-radius: 6px;
+        cursor: pointer;
     }
 
 }
