--- a/client/public/style/home/_RestaurantList.scss
+++ b/client/public/style/home/_RestaurantList.scss
@@ -8,14 +8,24 @@ table {
 
     thead{
         background-color: var(--basic_site_color);
+        font-weight: bold;
         
     }
 
     tbody {
         //backdrop-filter: blur(5px);
-        background: rgba($color: #fff, $alpha: 0.6);
-        color: rgba($color: #000000, $alpha: 0.8);
+        //background: rgba($color: #fff, $alpha: 1);
+        background: url(/public/assets/paper.jpg);
+        //color: rgba($color: #000000, $alpha: 0.8);
+        //color: #fff;
+        //font-weight: bold;
     }
+
+    tbody td {
+        font-size: 1.4rem;
+        text-transform: capitalize;
+    }
+
 
     th,td {
         text-align: center;
