--- a/client/public/style/home/_RestaurantList.scss
+++ b/client/public/style/home/_RestaurantList.scss
@@ -14,8 +14,8 @@ table {
 
     tbody {
         //backdrop-filter: blur(5px);
-        //background: rgba($color: #fff, $alpha: 1);
-        background: url(/public/assets/paper.jpg);
+        background: rgba($color: #fff, $alpha: 1);
+        //background: url(/public/assets/paper.jpg);
         //color: rgba($color: #000000, $alpha: 0.8);
         //color: #fff;
         //font-weight: bold;
