--- a/client/public/style/home/home.scss
+++ b/client/public/style/home/home.scss
@@ -1,5 +1,7 @@
 @use '../config';
+@use 'restaurantForm';
 @use 'RestaurantList';
+
 
 body {
     background: url('/assets/pic1.jpg') center no-repeat;
@@ -20,60 +22,4 @@ body {
         text-align: center;
         color:var(--basic_site_color);
     }
-}
-
-form {
-
-    width: 100%;
-    display: flex;
-
-    section {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
-    .input_container {
-        //border:solid 2px green;
-        width: 25%;
-        margin: 0.6rem;
-    }
-
-    .input_container input {
-        width: 100%;
-        height: 2rem;
-        padding: 0.6rem;
-        outline-color: var(--basic_site_color);
-        border-width: 0.2rem;
-        height: 3rem;
-        border-radius: 6px;
-        border: none;
-        background-color: rgba($color: #fff, $alpha: 0.6);
-        
-    }
-
-    .input_container input::placeholder {
-        font-size: 1rem;
-        color: var(--basic_site_color);
-    } 
-
-    #button_container {
-        //border:solid 2px green;
-        flex-grow: 0.5;
-        margin: 0.6rem;
-    }
-
-    #button_container button {
-        width: 100%;
-        height: 100%;
-        border:none;
-        text-align: center;
-        font-size: 1.4rem;
-        color: var(--basic_site_color2);
-        background:var(--basic_site_color);
-        border-radius: 6px;
-        cursor: pointer;
-    }
-
 }
